--- a/package.json
+++ b/package.json
@@ -1,10 +1,10 @@
 {
-  "name": "@guivic/fastify-bull",
-  "version": "0.0.5",
+  "name": "fastify-bull",
+  "version": "0.0.6",
   "description": "Fastify plugin to use easily Bull.",
   "main": "index.js",
-  "repository": "git@github.com:guivic/fastify-bull.git",
-  "author": "lludol <ludovic.lerus@guivic.io>",
+  "repository": "git@github.com:https://github.com/jerrythomas/fastify-bull.git",
+  "author": "Jerry Thomas <me@jerrythomas.name>",
   "license": "MIT",
   "devDependencies": {
     "@guivic/eslint-config-guivic": "^0.2.0",
@@ -14,7 +14,6 @@
     "tap": "^13.1.0"
   },
   "dependencies": {
-    "fast-glob": "^2.2.7",
     "fastify-plugin": "^1.5.0",
     "ioredis": "^4.9.5"
   },
