--- a/package.json
+++ b/package.json
@@ -8,19 +8,19 @@
   "license": "MIT",
   "devDependencies": {
     "@guivic/eslint-config-guivic": "^0.2.0",
-    "bull": "^3.9.1",
-    "eslint": "^5.16.0",
+    "eslint": "^6.8.0",
     "fastify": "^2.3.0",
-    "tap": "^13.1.0"
+    "tap": "^14.10.7"
   },
   "dependencies": {
+    "bull": "^3.9.1",
     "fastify-plugin": "^1.5.0",
     "ioredis": "^4.9.5"
   },
   "keywords": [
-    "guivic",
     "fastify",
-    "bull"
+    "bull",
+    "queue"
   ],
   "peerDependencies": {
     "bull": "^3.9.1"
