--- a/package.json
+++ b/package.json
@@ -6,17 +6,29 @@
   "repository": "git@github.com:guivic/fastify-bull.git",
   "author": "lludol <ludovic.lerus@guivic.io>",
   "license": "MIT",
+  "scripts": {
+    "test": "ava",
+    "test:coverage": "nyc --reporter=lcov ava"
+  },
   "devDependencies": {
     "@guivic/eslint-config-guivic": "^0.2.0",
+    "ava": "^3.12.1",
     "bull": "^3.9.1",
     "eslint": "^5.16.0",
     "fastify": "^2.3.0",
-    "tap": "^13.1.0"
+    "fs-extra": "^9.0.1",
+    "nyc": "^15.1.0"
   },
   "dependencies": {
     "fast-glob": "^2.2.7",
     "fastify-plugin": "^1.5.0",
     "ioredis": "^4.9.5"
+  },
+  "ava": {
+    "files": [
+      "__tests__/**/*.test.js"
+    ],
+    "verbose": true
   },
   "keywords": [
     "guivic",
