fix(test): Redis added in github actions

--- a/.github/workflows/nodejs.yml
+++ b/.github/workflows/nodejs.yml
@@ -24,5 +24,9 @@ jobs:
       uses: actions/setup-node@v1
       with:
         node-version: ${{ matrix.node-version }}
+    - name: Start Redis 5
+      uses: supercharge/redis-github-action@1.1.0
+      with:
+        redis-version: 5
     - run: yarn install --frozen-lockfile
     - run: npm test
